--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -25,7 +25,7 @@
                     Personal Information
                 </h2>
 
-                <form id="checkout-form">
+                <form id="checkout-form" onsubmit="handleSubmit(event)">
                     <div class="form-row">
                         <div class="form-group">
                             <label for="firstName">First Name <span class="required">*</span></label>
@@ -69,7 +69,7 @@
                                 <option value="">Select Department</option>
                                 <option value="Computer Science">Information and Communication Engineering (ICE)
                                 </option>
-                                <option value="Electrical Engineering">Electrical and Electronics Engineering EEE)
+                                <option value="Electrical Engineering">Electrical and Electronics Engineering (EEE)
                                 </option>
                                 <option value="Mechanical Engineering">Material Science and Engineering (ME)</option>
                                 <option value="Mathematics">Computer Science and Engineering (CSE)</option>
@@ -114,7 +114,7 @@
                 </h2>
 
                 <div id="books-list">
-                    <!-- Books will be loaded here -->
+                    
                 </div>
 
                 <div class="summary-total">
@@ -138,38 +138,20 @@
 
         <div class="submit-section">
             <button type="button" class="submit-btn" id="submit-btn">
-                <i class="fas fa-file-pdf" id="generatePdf"></i> Generate Receipt & Complete Checkout
+                <i class="fas fa-file-pdf" id="generatePdf"></i> Submit & Generate PDF
             </button>
             <a href="/index.html" class="back-btn">
                 <i class="fas fa-arrow-left"></i> Back to Library
             </a>
         </div>
-
-        <!-- <div class="loading" id="loading">
-            <div class="spinner"></div>
-            <p>Generating your receipt...</p>
-        </div> -->
     </div>
     <script>
-        // Initialize jsPDF (corrected)
         const { jsPDF } = window.jspdf || {};
 
-        document.querySelector('.submit-btn').addEventListener('click', function () {
-            // First check if there are books
-            const checkoutItems = JSON.parse(localStorage.getItem('cart') || '[]');
-            if (checkoutItems.length === 0) {
-                alert('Please add at least one book to checkout');
-                return;
-            }
+        document.addEventListener('DOMContentLoaded', function () {
+            loadCheckoutItems();
 
-            // Then validate the form
-            if (!validateForm()) {
-                alert('Please fill all required fields correctly');
-                return;
-            }
-
-            // If all validations pass, generate PDF
-            generatePdf();
+            document.getElementById('submit-btn').addEventListener('click', handleSubmitAndPDF);
         });
 
         function validateForm() {
@@ -181,18 +163,15 @@
                 const formGroup = field.closest('.form-group');
                 const errorMessage = formGroup.querySelector('.error-message');
 
-                // Clear previous errors
                 formGroup.classList.remove('error');
                 if (errorMessage) errorMessage.style.display = 'none';
 
-                // Check if field is empty
                 if (!field.value.trim()) {
                     formGroup.classList.add('error');
                     if (errorMessage) errorMessage.style.display = 'block';
                     isValid = false;
                 }
 
-                // Special validation for email
                 if (field.type === 'email' && field.value) {
                     const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
                     if (!emailRegex.test(field.value)) {
@@ -203,9 +182,8 @@
                     }
                 }
 
-                // Special validation for phone number
                 if (field.id === 'phone' && field.value) {
-                    const phoneRegex = /^[0-9]{10,15}$/; // Adjust regex as needed
+                    const phoneRegex = /^[0-9]{10,15}$/;
                     if (!phoneRegex.test(field.value)) {
                         formGroup.classList.add('error');
                         if (errorMessage) errorMessage.textContent = 'Please enter a valid phone number';
@@ -218,14 +196,12 @@
             return isValid;
         }
 
-        function generatePdf() {
-            // First validate the form
+        async function handleSubmitAndPDF() {
             if (!validateForm()) {
                 alert('Please fill all required fields correctly');
                 return;
             }
 
-            // Then check if there are books in cart
             const checkoutItems = JSON.parse(localStorage.getItem('cart') || '[]');
             if (checkoutItems.length === 0) {
                 alert('Please add at least one book to checkout');
@@ -233,36 +209,92 @@
             }
 
             const element = document.getElementById('form-to-pdf');
-            const loading = document.getElementById('loading');
+            const submitBtn = document.getElementById('submit-btn');
 
-            // Show loading spinner
-            // loading.style.display = 'flex';
+            try {
+                await generatePDF();
+                await submitForm();
+                alert('Borrowing submitted successfully!');
 
-            // Delay to ensure UI updates
-            setTimeout(() => {
-                html2canvas(element, {
-                    scale: 2,
-                    logging: true,
-                    useCORS: true,
-                }).then(canvas => {
-                    const imgData = canvas.toDataURL('image/png');
-                    const pdfWidth = element.offsetWidth / 2;
-                    const pdfHeight = (element.offsetHeight / element.offsetWidth) * pdfWidth;
+                document.getElementById('checkout-form').reset();
+                localStorage.removeItem('cart');
+                loadCheckoutItems();
 
-                    const pdf = new jsPDF('p', 'pt', [pdfWidth, pdfHeight]);
-                    pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
-                    pdf.save('seminar-library-checkout-ICE.pdf');
-                    loading.style.display = 'none';
-                }).catch(err => {
-                    console.error('Failed to generate PDF:', err);
-                    loading.style.display = 'none';
-                    alert('PDF generation failed. Please try again.');
-                });
-            }, 100);
+            } catch (error) {
+                console.error('Error:', error);
+                alert('An error occurred. Please try again.');
+            }
         }
-        document.addEventListener('DOMContentLoaded', function () {
-            loadCheckoutItems();
-        });
+
+        function generatePDF() {
+            return new Promise((resolve, reject) => {
+                const element = document.getElementById('form-to-pdf');
+
+                setTimeout(() => {
+                    html2canvas(element, {
+                        scale: 1,
+                        logging: false,
+                        useCORS: true,
+                    }).then(canvas => {
+                        const imgData = canvas.toDataURL('image/png');
+                        const pdfWidth = element.offsetWidth / 2;
+                        const pdfHeight = (element.offsetHeight / element.offsetWidth) * pdfWidth;
+
+                        const pdf = new jsPDF('p', 'pt', [pdfWidth, pdfHeight]);
+                        pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
+                        pdf.save('seminar-library-checkout-ICE.pdf');
+
+                        resolve();
+                    }).catch(err => {
+                        console.error('Failed to generate PDF:', err);
+                        reject(new Error('PDF generation failed'));
+                    });
+                }, 100);
+            });
+        }
+
+        function submitForm() {
+            return new Promise((resolve, reject) => {
+                const form = document.getElementById('checkout-form');
+
+                const data = {
+                    id: form.studentId.value.trim(),
+                    first_name: form.firstName.value.trim(),
+                    last_name: form.lastName.value.trim(),
+                    email: form.email.value.trim(),
+                    phone_number: form.phone.value.trim(),
+                    borrowed_date: new Date().toISOString().split("T")[0],
+                    return_date: form.returndate.value,
+                    department: form.department.value,
+                    s_session: form.year.value,
+                    address: form.address.value,
+                    notes: form.notes.value
+                };
+
+                fetch("/borrow-checkout", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(data)
+                })
+                    .then(res => {
+                        if (!res.ok) {
+                            return res.json().then(err => Promise.reject(err));
+                        }
+                        return res.json();
+                    })
+                    .then(result => {
+                        resolve(result);
+                    })
+                    .catch(err => {
+                        console.error('Submission error:', err);
+                        if (err.error) {
+                            reject(new Error(`Submission failed: ${err.error}`));
+                        } else {
+                            reject(new Error('Form submission failed'));
+                        }
+                    });
+            });
+        }
 
         function loadCheckoutItems() {
             const checkoutItems = JSON.parse(localStorage.getItem('cart') || '[]');
@@ -292,7 +324,6 @@
             booksListContainer.innerHTML = booksHTML;
             totalBooksElement.textContent = checkoutItems.length;
 
-            // Add event listeners to all remove buttons
             document.querySelectorAll('.remove-btn').forEach(button => {
                 button.addEventListener('click', function () {
                     const bookIndex = this.getAttribute('data-book-id');
@@ -304,53 +335,11 @@
         function removeBookFromCart(index) {
             let cartItems = JSON.parse(localStorage.getItem('cart') || '[]');
 
-            // Remove the item at the specified index
             cartItems.splice(index, 1);
-
-            // Update localStorage
             localStorage.setItem('cart', JSON.stringify(cartItems));
 
-            // Refresh the display
             loadCheckoutItems();
         }
-
-
-
-
-
-        document.getElementById("submit-btn").addEventListener("submit", async function (e) {
-            e.preventDefault();
-
-            const form = e.target;
-            const now = new Date().toISOString();
-
-            const data = {
-                studentId: form.studentId.value,
-                firstName: form.firstName.value,
-                lastName: form.lastName.value,
-                email: form.email.value,
-                phone: form.phone.value,
-                borrowed_date: now,
-                returndate: form.returndate.value,
-                department: form.department.value,
-                year: form.year.value,
-                address: form.address.value,
-                notes: form.notes.value,
-                created_at: now
-            };
-
-            try {
-                const response = await fetch("/borrow-checkout", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify(data)
-                });
-                const result = await response.json();
-                alert(result.message);
-                form.reset();
-            } catch (err) {
-                alert("Error submitting book donation: " + err.message);
-            }
-        });
     </script>
 </body>
+</html>
