--- a/about/about.html
+++ b/about/about.html
@@ -91,7 +91,7 @@
       </div>
     </div>
     <!-- =============== Cart Start ================ -->
-    <div class="cartOverlay" id="cartOverlay"></div>
+    <!-- <div class="cartOverlay" id="cartOverlay"></div>
     <div class="cart-sidebar" id="cart-sidebar">
       <div class="header">
         <img src="/assets/Your Cart.png" width="50px" alt="" srcset="">
@@ -120,7 +120,7 @@
         </div>
         <button class="proceed-btn" onclick="window.location.href='/checkout/checkout.html'">Proceed to Checkout</button>
       </div>
-    </div>
+    </div> -->
   </div>
   <!-- ===============Navbar End====================== -->
 
