--- a/index.html
+++ b/index.html
@@ -186,9 +186,8 @@
                 <div class="service-cards" data-aos="flip-left" data-aos-delay="100" data-aos-duration="1000"
                     data-aos-offset="150">
                     <div class="icon"><i class="far fa-pen-to-square"></i></div>
-                    <h2>Personalized Recommendation</h2>
-                    <p>Get book recommendation based on your book borrowing history and interest to discover new
-                        knowledge.
+                    <h2>Access Digital E-books</h2>
+                    <p>Read books online or download digital resources. Our online management system provides you both physical and online access.
                     </p>
                 </div>
 
@@ -222,7 +221,7 @@
                     <p>By John G. Proakis</p>
                     <p>Copies Available: 3</p>
                     <div class="btns">
-                        <button>Download</button>
+                        <a href="assets/download/ai.pdf" class="btn" download><button class="download-btn">Download</button></a>
                         <button onclick="addToCart(this)">Borrow</button>
                     </div>
                 </div>
@@ -234,7 +233,7 @@
                     <p>By Charu C. Aggarwal</p>
                     <p>Copies Available: 3</p>
                     <div class="btns">
-                        <button>Download</button>
+                        <a href="download/ai.pdf" class="btn" download><button class="download-btn">Download</button></a>
                         <button onclick="addToCart(this)">Borrow</button>
                     </div>
                 </div>
@@ -246,7 +245,7 @@
                     <p>By Theodore S. Rappaport</p>
                     <p>Copies Available: 3</p>
                     <div class="btns">
-                        <button>Download</button>
+                        <a href="download/ai.pdf" class="btn" download><button class="download-btn">Download</button></a>
                         <button onclick="addToCart(this)">Borrow</button>
                     </div>
                 </div>
@@ -258,7 +257,7 @@
                     <p>By V.K Mehta</p>
                     <p>Copies Available: 3</p>
                     <div class="btns">
-                        <button>Download</button>
+                        <a href="download/ai.pdf" class="btn" download><button class="download-btn">Download</button></a>
                         <button onclick="addToCart(this)">Borrow</button>
                     </div>
                 </div>
@@ -270,7 +269,7 @@
                     <p>By J.M Senior</p>
                     <p>Copies Available: 3</p>
                     <div class="btns">
-                        <button>Download</button>
+                        <a href="download/ai.pdf" class="btn" download><button class="download-btn">Download</button></a>
                         <button onclick="addToCart(this)">Borrow</button>
                     </div>
                 </div>
@@ -282,7 +281,7 @@
                     <p>By Rafael C. Gonjalez</p>
                     <p>Copies Available: 3</p>
                     <div class="btns">
-                        <button>Download</button>
+                        <a href="download/ai.pdf" class="btn" download><button class="download-btn">Download</button></a>
                         <button onclick="addToCart(this)">Borrow</button>
                     </div>
                 </div>
