--- a/authentication/login/login.html
+++ b/authentication/login/login.html
@@ -90,7 +90,7 @@
             </div>
         </div>
         <!-- =============== Cart Start ================ -->
-        <div class="cartOverlay" id="cartOverlay"></div>
+        <!-- <div class="cartOverlay" id="cartOverlay"></div>
         <div class="cart-sidebar" id="cart-sidebar">
             <div class="header">
                 <img src="/assets/Your Cart.png" width="50px" alt="" srcset="">
@@ -119,7 +119,7 @@
                 </div>
                 <button class="proceed-btn" onclick="window.location.href='/checkout/checkout.html'">Proceed to Checkout</button>
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- ===============Navbar End====================== -->
 
@@ -287,7 +287,6 @@
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            // Reset errors and show spinner
             emailError.style.display = 'none';
             passwordError.style.display = 'none';
             spinner.style.display = 'block';
@@ -296,12 +295,11 @@
             showSpinner();
             try {
                 await signInWithEmailAndPassword(auth, email, password);
-                window.location.href = '/index.html';
+                window.location.href = '../../index.html';
             } catch (error) {
                 hideSpinner();
                 console.error("Login error:", error);
 
-                // Show appropriate error message
                 spinner.style.display = 'none';
                 loginButton.disabled = false;
                 passwordError.style.display = 'block';
@@ -323,7 +321,6 @@
             }
         });
 
-        // Hide password error on input change
         document.getElementById('password').addEventListener('input', () => {
             passwordError.style.display = 'none';
         });
