--- a/book/books.html
+++ b/book/books.html
@@ -94,7 +94,7 @@
     </div>
 
     <!-- =============== Cart Start ================ -->
-    <div class="cartOverlay" id="cartOverlay"></div>
+    <!-- <div class="cartOverlay" id="cartOverlay"></div>
     <div class="cart-sidebar" id="cart-sidebar">
         <div class="header">
             <img src="/assets/Your Cart.png" width="50px" alt="" srcset="">
@@ -123,7 +123,7 @@
             </div>
             <button class="proceed-btn" onclick="window.location.href='/checkout/checkout.html'">Proceed to Checkout</button>
         </div>
-    </div>
+    </div> -->
     <!-- ===============Navbar End====================== -->
   <div class="book-header">
     <h1>Browse Books</h1>
