--- a/donate/donate.html
+++ b/donate/donate.html
@@ -92,7 +92,7 @@
   </div>
 
   <!-- =============== Cart Start ================ -->
-  <div class="cartOverlay" id="cartOverlay"></div>
+  <!-- <div class="cartOverlay" id="cartOverlay"></div>
   <div class="cart-sidebar" id="cart-sidebar">
     <div class="header">
       <img src="/assets/Your Cart.png" width="50px" alt="" srcset="">
@@ -121,7 +121,7 @@
       </div>
       <button class="proceed-btn" onclick="window.location.href='/checkout/checkout.html'">Proceed to Checkout</button>
     </div>
-  </div>
+  </div> -->
   <!-- ===============Navbar End====================== -->
 
 
