featured books backend

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
             <div class="book-grid" id="bookGrid" data-aos="fade-up" data-aos-delay="500" data-aos-duration="800"
                 data-aos-offset="150">
-                <div class="book-card">
+                <!-- <div class="book-card">
                     <img src="assets/books/book1.jpeg" alt="Book 1" />
                     <h3>Digital Signal Processing</h3>
                     <p>By John G. Proakis</p>
@@ -284,7 +284,7 @@
                         <a href="download/ai.pdf" class="btn" download><button class="download-btn">Download</button></a>
                         <button onclick="addToCart(this)">Borrow</button>
                     </div>
-                </div>
+                </div> -->
             </div>
             <a href="/book/books.html"><button class="show-more" data-aos="fade-up">Show
                     More</button></a>
