--- a/about/about.html
+++ b/about/about.html
@@ -16,7 +16,7 @@
   <!-- =================NavBar Start================ -->
   <div class="navbar-container">
     <div class="logo">
-      <a href="/index.html"><img src="/assets/Seminar Library Logo (Without BG).png" srcset=""></a>
+      <a href="/"><img src="/assets/Seminar Library Logo (Without BG).png" srcset=""></a>
     </div>
 
     <div class="items">
@@ -28,16 +28,16 @@
           </div>
         </li>
         <li><a href="/">Home</a></li>
-        <li><a href="/about/about.html">About</a></li>
-        <li><a href="/book/books.html">Books</a></li>
-        <li><a href="/donate/donate.html">Donate</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/book">Books</a></li>
+        <li><a href="/donate">Donate</a></li>
         <li>
-          <button class="cart-icon" id="cart-icon" onclick="window.location.href='/checkout/checkout.html'">
+          <button class="cart-icon" id="cart-icon" onclick="window.location.href='/checkout'">
             <i class="fas fa-list-check" style="font-size: 20px;"></i>
             <span class="cart-count" id="cart-count">0</span>
           </button>
         </li>
-        <li><button class="login-btn" onclick="window.location.href='/authentication/login/login.html' ">Login</button>
+        <li><button class="login-btn" onclick="window.location.href='/login' ">Login</button>
         </li>
         <!-- <li>
           <div class="profile-dropdown">
@@ -61,7 +61,7 @@
         <i class="fa fa-search search-icon" onclick="openSearch()" id="search-icon" style="font-size: 20px; ">
         </i>
       </div>
-      <button class="mobile-cart-icon" id="mobile-cart-icon" onclick="window.location.href='/checkout/checkout.html'">
+      <button class="mobile-cart-icon" id="mobile-cart-icon" onclick="window.location.href='/checkout'">
         <i class="fa fa-list-check" style="font-size: 20px;"></i>
         <span class="mobile-cart-count" id="mobile-cart-count">0</span>
       </button>
@@ -83,9 +83,9 @@
           </div>
         </div>
         <a href="/">Home</a>
-        <a href="/about/about.html">About</a>
-        <a href="/book/books.html">Books</a>
-        <a href="/donate/donate.html">Donate</a>
+        <a href="/about">About</a>
+        <a href="/book">Books</a>
+        <a href="/donate">Donate</a>
         <button class="mobile-login-btn"><span><i class="fas fa-sign-in-alt"></i></span>&nbsp;Login</button>
         <button class="mobile-logout-btn"><span><i class="fas fa-sign-out-alt"></i></span>&nbsp;Log Out</button>
       </div>
@@ -246,10 +246,10 @@
       <div class="footer-section">
         <h2>Quick Links</h2>
         <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/book/books.html">Browse Books</a></li>
-          <li><a href="/authentication/login/login.html">Login</a></li>
-          <li><a href="/book/books.html">Request a Book</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/book">Browse Books</a></li>
+          <li><a href="/login">Login</a></li>
+          <li><a href="/book">Request a Book</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
