--- a/authentication/forgot-pass/forgot-password.html
+++ b/authentication/forgot-pass/forgot-password.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reset Password</title>
-  <link rel="stylesheet" href="forgot-password.css">
+  <link rel="stylesheet" href="/authentication/forgot-pass/forgot-password.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
       </div>
       <button type="submit">Send Reset Link</button>
       <div class="toggle-form">
-        Remember your password? <a href="/authentication/login/login.html" id="show-login-from-forgot">Login</a>
+        Remember your password? <a href="/login" id="show-login-from-forgot">Login</a>
       </div>
     </form>
   </div>
