--- a/authentication/login/login.html
+++ b/authentication/login/login.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | Seminar Library</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="/authentication/login/common.css">
+    <link rel="stylesheet" href="/authentication/login/login.css">
     <link rel="stylesheet" href="/css/responsive.css">
 </head>
 
@@ -27,16 +27,16 @@
                     </div>
                 </li>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about/about.html">About</a></li>
-                <li><a href="/book/books.html">Books</a></li>
-                <li><a href="/donate/donate.html">Donate</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/book">Books</a></li>
+                <li><a href="/donate">Donate</a></li>
                 <li>
-                    <button class="cart-icon" id="cart-icon" onclick="window.location.href='/checkout/checkout.html'">
+                    <button class="cart-icon" id="cart-icon" onclick="window.location.href='/checkout'">
                         <i class="fas fa-list-check" style="font-size: 20px;"></i>
                         <span class="cart-count" id="cart-count">0</span>
                     </button>
                 </li>
-                <li><button class="login-btn" onclick="window.location.href='/authentication/login/login.html' ">Login</button>
+                <li><button class="login-btn" onclick="window.location.href='/authentication/login' ">Login</button>
                 </li>
                 <!-- <li>
                     <div class="profile-dropdown">
@@ -60,7 +60,7 @@
                 <i class="fa fa-search search-icon" onclick="openSearch()" id="search-icon" style="font-size: 20px; ">
                 </i>
             </div>
-            <button class="mobile-cart-icon" id="mobile-cart-icon" onclick="window.location.href='/checkout/checkout.html'">
+            <button class="mobile-cart-icon" id="mobile-cart-icon" onclick="window.location.href='/checkout'">
                 <i class="fa fa-list-check" style="font-size: 20px;"></i>
                 <span class="mobile-cart-count" id="mobile-cart-count">0</span>
             </button>
@@ -82,9 +82,9 @@
                     </div>
                 </div>
                 <a href="/">Home</a>
-                <a href="/about/about.html">About</a>
-                <a href="/book/books.html">Books</a>
-                <a href="/donate/donate.html">Donate</a>
+                <a href="/about">About</a>
+                <a href="/book">Books</a>
+                <a href="/donate">Donate</a>
                 <button class="mobile-login-btn"><span><i class="fas fa-sign-in-alt"></i></span>&nbsp;Login</button>
                 <button class="mobile-logout-btn"><span><i class="fas fa-sign-out-alt"></i></span>&nbsp;Log Out</button>
             </div>
@@ -130,7 +130,7 @@
 
     <div class="login-container">
         <div class="login-logo">
-            <a href="/index.html"><img src="/assets/Seminar Library Logo (Without BG).png" alt="Company Logo"></a>
+            <a href="/"><img src="/assets/Seminar Library Logo (Without BG).png" alt="Company Logo"></a>
         </div>
 
         <h1>Welcome Back</h1>
@@ -146,7 +146,7 @@
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" placeholder="Enter your password" required>
-                <a href="/authentication/forgot pass/forgot-password.html" class="forgot-password">Forgot password?</a>
+                <a href="/authentication/forgot pass" class="forgot-password">Forgot password?</a>
                 <div class="error-message" id="password-error">Password must be at least 6 characters</div>
             </div>
             <button type="submit" class="btn btn-primary">Sign In</button>
@@ -167,7 +167,7 @@
         </div>
 
         <p class="signup-link">
-            Don't have an account? <a href="/authentication/signup/signup.html">Sign up</a>
+            Don't have an account? <a href="/signup">Sign up</a>
         </p>
     </div>
 
@@ -186,10 +186,10 @@
             <div class="footer-section">
                 <h2>Quick Links</h2>
                 <ul>
-                    <li><a href="i/ndex.html">Home</a></li>
-                    <li><a href="/book/books.html">Browse Books</a></li>
-                    <li><a href="/authentication/login/login.html">Login</a></li>
-                    <li><a href="/book/books.html">Request a Book</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/book">Browse Books</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/book">Request a Book</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
@@ -241,7 +241,7 @@
             try {
                 showSpinner();
                 await signInWithPopup(auth, provider);
-                window.location.href = '/index.html';
+                window.location.href = '/';
             } catch (error) {
                 console.error("Social sign-in error:", error);
             } finally {
@@ -295,7 +295,7 @@
             showSpinner();
             try {
                 await signInWithEmailAndPassword(auth, email, password);
-                window.location.href = '../../index.html';
+                window.location.href = '../../';
             } catch (error) {
                 hideSpinner();
                 console.error("Login error:", error);
@@ -325,7 +325,7 @@
             passwordError.style.display = 'none';
         });
     </script>
-    <script src="common.js"></script>
+    <script src="/authentication/login/common.js"></script>
 
 </body>
 
