--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -29,17 +29,17 @@
                     </div>
                 </li>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about/about.html">About</a></li>
-                <li><a href="/book/books.html">Books</a></li>
-                <li><a href="/donate/donate.html">Donate</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/book">Books</a></li>
+                <li><a href="/donate">Donate</a></li>
                 <li>
-                    <button class="cart-icon" id="cart-icon" onclick="window.location.href='/checkout/checkout.html'">
+                    <button class="cart-icon" id="cart-icon" onclick="window.location.href='/checkout'">
                         <i class="fas fa-list-check" style="font-size: 20px;"></i>
                         <span class="cart-count" id="cart-count">0</span>
                     </button>
                 </li>
                 <li><button class="login-btn"
-                        onclick="window.location.href='/authentication/login/login.html' ">Login</button>
+                        onclick="window.location.href='/login' ">Login</button>
                 </li>
                 <!-- <li>
                     <div class="profile-dropdown">
@@ -64,7 +64,7 @@
                 </i>
             </div>
             <button class="mobile-cart-icon" id="mobile-cart-icon"
-                onclick="window.location.href='/checkout/checkout.html'">
+                onclick="window.location.href='/checkout'">
                 <i class="fa fa-list-check" style="font-size: 20px;"></i>
                 <span class="mobile-cart-count" id="mobile-cart-count">0</span>
             </button>
@@ -86,9 +86,9 @@
                     </div>
                 </div>
                 <a href="/">Home</a>
-                <a href="/about/about.html">About</a>
-                <a href="/book/books.html">Books</a>
-                <a href="/donate/donate.html">Donate</a>
+                <a href="/about">About</a>
+                <a href="/book">Books</a>
+                <a href="/donate">Donate</a>
                 <button class="mobile-login-btn"><span><i class="fas fa-sign-in-alt"></i></span>&nbsp;Login</button>
                 <button class="mobile-logout-btn"><span><i class="fas fa-sign-out-alt"></i></span>&nbsp;Log Out</button>
             </div>
@@ -254,7 +254,7 @@
             <button type="button" class="submit-btn" id="submit-btn">
                 <i class="fas fa-file-pdf" id="generatePdf"></i> Submit & Generate PDF
             </button>
-            <a href="/index.html" class="back-btn">
+            <a href="/" class="back-btn">
                 <i class="fas fa-arrow-left"></i> Back to Library
             </a>
         </div>
@@ -274,10 +274,10 @@
             <div class="footer-section">
                 <h2>Quick Links</h2>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/book/books.html">Browse Books</a></li>
-                    <li><a href="/authentication/login/login.html">Login</a></li>
-                    <li><a href="/book/books.html">Request a Book</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/book">Browse Books</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/book">Request a Book</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
