--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                     </div>
                 </li>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about/about.html">About</a></li>
-                <li><a href="/book/books.html">Books</a></li>
-                <li><a href="/donate/donate.html">Donate</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/book">Books</a></li>
+                <li><a href="/donate">Donate</a></li>
                 <li>
-                    <button class="cart-icon" id="cart-icon" onclick="window.location.href='/checkout/checkout.html'">
+                    <button class="cart-icon" id="cart-icon" onclick="window.location.href='/checkout'">
                         <i class="fas fa-list-check" style="font-size: 20px;"></i>
                         <span class="cart-count" id="cart-count">0</span>
                     </button>
                 </li>
-                <li><button class="login-btn" onclick="window.location.href='/authentication/login/login.html' ">Login</button>
+                <li><button class="login-btn" onclick="window.location.href='/login' ">Login</button>
                 </li>
                 <!-- <li>
                     <div class="profile-dropdown">
@@ -69,7 +69,7 @@
                 <i class="fa fa-search search-icon" onclick="openSearch()" id="search-icon" style="font-size: 20px; ">
                 </i>
             </div>
-            <button class="mobile-cart-icon" id="mobile-cart-icon" onclick="window.location.href='/checkout/checkout.html'">
+            <button class="mobile-cart-icon" id="mobile-cart-icon" onclick="window.location.href='/checkout'">
                 <i class="fa fa-list-check" style="font-size: 20px;"></i>
                 <span class="mobile-cart-count" id="mobile-cart-count">0</span>
             </button>
@@ -91,10 +91,10 @@
                     </div>
                 </div>
                 <a href="/">Home</a>
-                <a href="/about/about.html">About</a>
-                <a href="/book/books.html">Books</a>
-                <a href="/donate/donate.html">Donate</a>
-                <button class="mobile-login-btn" onclick="window.location.href='/authentication/login/login.html'"><span><i
+                <a href="/about">About</a>
+                <a href="/book">Books</a>
+                <a href="/donate">Donate</a>
+                <button class="mobile-login-btn" onclick="window.location.href='/login'"><span><i
                             class="fas fa-sign-in-alt"></i></span>&nbsp;Login</button>
                 <button class="mobile-logout-btn"><span><i class="fas fa-sign-out-alt"></i></span>&nbsp;Log Out</button>
             </div>
@@ -129,7 +129,7 @@
                 <span>Total Books:</span>
                 <p id="cart-total">0</p>
             </div>
-            <button class="proceed-btn" onclick="window.location.href='/checkout/checkout.html'">Proceed to Checkout</button>
+            <button class="proceed-btn" onclick="window.location.href='/checkout'">Proceed to Checkout</button>
         </div>
     </div>
     <!-- ===============Navbar End====================== -->
@@ -145,7 +145,7 @@
                     <p data-aos="fade-down" data-aos-delay="300" data-aos-duration="1000">Explore a world of knowledge
                         and
                         discovery through our vast book collection.</p>
-                    <a href="/book/books.html"><button data-aos="flip-left" data-aos-delay="300"
+                    <a href="/book"><button data-aos="flip-left" data-aos-delay="300"
                             data-aos-duration="1000">Browse Books</button></a>
                 </div>
 
@@ -208,7 +208,7 @@
         <div class="featured-books-container">
             <div class="new-featured-books">
                 <h2 class="section-title" data-aos="fade-right">📚 Featured Books</h2>
-                <a href="/book/books.html">
+                <a href="/book">
                     <h5 class="view-all-books" data-aos="fade-right">View All Books <i class="fa fa-arrow-right"></i>
                     </h5>
                 </a>
@@ -286,7 +286,7 @@
                     </div>
                 </div> -->
             </div>
-            <a href="/book/books.html"><button class="show-more" data-aos="fade-up">Show
+            <a href="/book"><button class="show-more" data-aos="fade-up">Show
                     More</button></a>
         </div>
         <!-- =============Featured Books End================= -->
@@ -418,10 +418,10 @@
                 <div class="footer-section">
                     <h2>Quick Links</h2>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="/book/books.html">Browse Books</a></li>
-                        <li><a href="/authentication/login/login.html">Login</a></li>
-                        <li><a href="/book/books.html">Request a Book</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/book">Browse Books</a></li>
+                        <li><a href="/login">Login</a></li>
+                        <li><a href="/book">Request a Book</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
