--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
                         <span class="cart-count" id="cart-count">0</span>
                     </button>
                 </li>
-                <li><button class="login-btn" onclick="window.location.href='/login' ">Login</button>
+                <li><button class="login-btn" id="login-btn" onclick="window.location.href='/login' ">Login</button>
                 </li>
-                <!-- <li>
-                    <div class="profile-dropdown">
+                <li>
+                    <div class="profile-dropdown" id="profile-dropdown">
                         <div class="profile-icon">
                             <img src="assets/review1.png" alt="Profile">
                         </div>
                         <div class="dropdown-content">
                             <a href="#">My Profile</a>
                             <a href="#">Settings</a>
-                            <a href="" class="logout"><button class="mobile-logout-btn"><span><i
+                            <a href="" class="logout"><button class="mobile-logout-btn" onclick="logout()"><span><i
                                             class="fas fa-sign-out-alt"></i></span>&nbsp;Log Out</button></a>
                         </div>
                     </div>
-                </li> -->
+                </li>
             </ul>
         </div>
 
