--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <img src="assets/review1.png" alt="Profile">
                         </div>
                         <div class="dropdown-content">
-                            <a href="#">My Profile</a>
+                            <a href="">My Profile</a>
                             <a href="#">Settings</a>
                             <a href="" class="logout"><button class="mobile-logout-btn" onclick="logout()"><span><i
                                             class="fas fa-sign-out-alt"></i></span>&nbsp;Log Out</button></a>
