--- a/about/about.html
+++ b/about/about.html
@@ -47,7 +47,7 @@
             <div class="dropdown-content">
               <a href="#">My Profile</a>
               <a href="#">Settings</a>
-              <a href="" class="logout"><button class="mobile-logout-btn"><span><i
+              <a href="" class="logout"><button class="mobile-logout-btn" onclick="logout()"><span><i
                       class="fas fa-sign-out-alt"></i></span>&nbsp;Log Out</button></a>
             </div>
           </div>
@@ -91,7 +91,7 @@
       </div>
     </div>
     <!-- =============== Cart Start ================ -->
-    <!-- <div class="cartOverlay" id="cartOverlay"></div>
+    <div class="cartOverlay" id="cartOverlay"></div>
     <div class="cart-sidebar" id="cart-sidebar">
       <div class="header">
         <img src="/assets/Your Cart.png" width="50px" alt="" srcset="">
@@ -120,7 +120,7 @@
         </div>
         <button class="proceed-btn" onclick="window.location.href='/checkout/checkout.html'">Proceed to Checkout</button>
       </div>
-    </div> -->
+    </div>
   </div>
   <!-- ===============Navbar End====================== -->
 
