--- a/public/index.html
+++ b/public/index.html
@@ -369,7 +369,7 @@
         </section> -->
         <!-- =============Notice Board End============== -->
 
-        <!-- =============Testimonial Start=============== -->
+        <!-- =============Testimonial Start============== -->
         <section class="section" data-aos="fade-up">
             <h2>💬 Student Testimonials</h2>
             <div class="carousel-container" id="carouselContainer">
