--- a/authentication/login/login.html
+++ b/authentication/login/login.html
@@ -342,6 +342,7 @@
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json',
+                                credentials: 'include'
                             },
                             body: JSON.stringify({ email, password })
                         });
