--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <div class="startup-container" id="startup">
+    <!-- <div class="startup-container" id="startup">
         <div class="logo"><img src="assets/hello.gif" width="300px" srcset=""></div>
         <div class="text">Welcome to Seminar Library, ICE, RU</div>
         <div class="progress-bar"><span></span></div>
-    </div>
+    </div> -->
 
     <!-- ========================NavBar Start=========================== -->
 
